## Process this file with automake to produce Makefile.in

SUBDIRS = IccApplyNamedCmm \
	@SICC_ICC_APPLY_PROFILES@ \
	IccDumpProfile \
	IccGamutMapGirdle \
	IccRoundTrip \
	IccProfLibTest \
	IccStripUnknownTags \
	IccV4ToMPE

DIST_SUBDIRS = IccApplyNamedCmm \
	IccApplyProfiles \
	IccDumpProfile \
	IccGamutMapGirdle \
	IccRoundTrip \
	IccProfLibTest \
	IccStripUnknownTags \
	IccV4ToMPE
